// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/RuleTemplate/EditRuleTemplate should match snap shot 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  编辑规则
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item ant-form-item-hidden"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="rule_name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="testName1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="规则"
                      >
                        规则
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="desc"
                            value="绑定的变量个数不建议超过阈值"
                          >
                            <div
                              class="ant-space ant-space-vertical"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-bottom: 8px;"
                              >
                                <div>
                                  绑定的变量个数不建议超过阈值
                                </div>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <section />
                              </div>
                            </div>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="annotation"
                        title="说明"
                      >
                        说明
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="annotation"
                            value="因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100"
                          >
                            因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="规则分类"
                      >
                        规则分类
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-space ant-space-vertical"
                            id="type"
                            value="使用建议"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-audit_accuracy rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    审核精度
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        在线
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-sql rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    SQL分类
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        DDL
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-operand rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    操作对象
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        数据库
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        表空间
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        表
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        字段
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        索引
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        视图
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        存储过程
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        函数
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        触发器
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        事件
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        用户
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-audit_purpose rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    审核目的
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        可维护性
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-performance_cost rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    性能消耗
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        高消耗
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="db_type"
                        title="数据库类型"
                      >
                        数据库类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="db_type"
                            value="MySQL"
                          >
                            MySQL
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="level"
                        title="规则等级"
                      >
                        规则等级
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="level_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="level_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="level_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="level"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="错误"
                              >
                                错误
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="params_first_key"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            最大绑定变量数量
                          </div>
                          <div
                            class="tip-content-box"
                            hidden=""
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="params_first_key"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="100"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      保 存
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      取 消
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/RuleTemplate/EditRuleTemplate when dataSource is empty object 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  编辑规则
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item ant-form-item-hidden"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="rule_name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="规则"
                      >
                        规则
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="desc"
                            value=""
                          >
                            <div
                              class="ant-space ant-space-vertical"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-bottom: 8px;"
                              >
                                <div />
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <section />
                              </div>
                            </div>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="annotation"
                        title="说明"
                      >
                        说明
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="annotation"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="规则分类"
                      >
                        规则分类
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="db_type"
                        title="数据库类型"
                      >
                        数据库类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="db_type"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="level"
                        title="规则等级"
                      >
                        规则等级
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="level_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="level_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="level_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="level"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择规则对应的等级
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      保 存
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      取 消
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/RuleTemplate/EditRuleTemplate when param type is boolean 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  编辑规则
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item ant-form-item-hidden"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="rule_name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="testName1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="规则"
                      >
                        规则
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="desc"
                            value="绑定的变量个数不建议超过阈值"
                          >
                            <div
                              class="ant-space ant-space-vertical"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-bottom: 8px;"
                              >
                                <div>
                                  绑定的变量个数不建议超过阈值
                                </div>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <section />
                              </div>
                            </div>
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="annotation"
                        title="说明"
                      >
                        说明
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="annotation"
                            value="因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100"
                          >
                            因为过度使用绑定变量会增加查询的复杂度，从而降低查询性能。过度使用绑定变量还会增加维护成本。默认阈值:100
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="规则分类"
                      >
                        规则分类
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-space ant-space-vertical"
                            id="type"
                            value="使用建议"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-audit_accuracy rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    审核精度
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        在线
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-sql rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    SQL分类
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        DDL
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-operand rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    操作对象
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        数据库
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        表空间
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        表
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        字段
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        索引
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        视图
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        存储过程
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        函数
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        触发器
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px; padding-bottom: 8px;"
                                    >
                                      <span>
                                        事件
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        用户
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-bottom: 8px;"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-audit_purpose rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    审核目的
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        可维护性
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center rule-category-performance_cost rule-detail-category css-x5diec"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span>
                                    性能消耗
                                    :
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                    style="flex-wrap: wrap; margin-bottom: -8px;"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="padding-bottom: 8px;"
                                    >
                                      <span>
                                        高消耗
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="db_type"
                        title="数据库类型"
                      >
                        数据库类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <section
                            class="css-lk9s71"
                            id="db_type"
                            value="MySQL"
                          >
                            MySQL
                          </section>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="level"
                        title="规则等级"
                      >
                        规则等级
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="level_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="level_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="level_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="level"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="错误"
                              >
                                错误
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="params_first_key_test"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            test
                          </div>
                          <div
                            class="tip-content-box"
                            hidden=""
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="true"
                            class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                            id="params_first_key_test"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      保 存
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      取 消
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
